--- a/src/index.css
+++ b/src/index.css
@@ -227,3 +227,28 @@ header p {
     transform: translateY(0);
   }
 }
+
+.progress-bar {
+  width: 100%;
+  height: 0.5rem;
+  margin-top: 1rem;
+  border-radius: 0.25rem;
+  background-color: #e9ecef;
+}
+
+.progress-bar::-webkit-progress-bar {
+  background-color: #e9ecef;
+  border-radius: 0.25rem;
+}
+
+.progress-bar::-webkit-progress-value {
+  background-color: #5d0909;
+  border-radius: 0.25rem;
+  transition: width 0.1s linear;
+}
+
+.progress-bar::-moz-progress-bar {
+  background-color: #5d0909;
+  border-radius: 0.25rem;
+  transition: width 0.1s linear;
+}
